Archive2/4e/e0d2a6e65402d2/output
main.cpp: In instantiation of 'union S<5ul>::<anonymous>':
main.cpp:7:5:   required from 'struct S<5ul>'
main.cpp:15:10:   required from here
main.cpp:8:19: error: 'int S<5ul>::<anonymous union>::arr1 [5]' is inaccessible
         int arr1[N];
                   ^
main.cpp:9:25: error: within this context
         char arr2[sizeof(arr1)];
                         ^
main.cpp: In function 'int main()':
main.cpp:15:10: warning: unused variable 's' [-Wunused-variable]
     S<5> s;
          ^
